feat: styling cards - add same height

--- a/#src/components/filter/filter.html
+++ b/#src/components/filter/filter.html
@@ -2,7 +2,7 @@
     <section class="filter">
         <label class="filter__label">
             <span class="filter__label-text">Filter</span>
-            <input type="search" class="filter__input">
+            <input id="filter" class="filter__input" type="search">
         </label>
     </section>
 </div>
