--- a/#src/components/houses/houses.html
+++ b/#src/components/houses/houses.html
@@ -1,146 +1,5 @@
 <div class="container">
     <section class="houses">
-        <section class="houses__list">
-            <article class="houses__house house-card">
-                <header class="house-card__header">
-                    <figure class="house-card__figure">
-                        <img class="house-card__img" src="https://source.unsplash.com/400x300/?house"
-                             alt="house footer sale">
-                        <span class="house-card__label">Independent living</span>
-                    </figure>
-                </header>
-                <div class="house-card__wrapper">
-                    <section class="house-card__content">
-                        <h2 class="house-card__title">Brunlees Court</h2>
-                        <address class="house-card__address">19-23 Cambridge Road, Southport</address>
-                        <p class="house-card__price-info">New Properties for Sale from <strong>£214,999</strong></p>
-                    </section>
-                    <footer class="house-card__footer">
-                        Shared Ownership Available
-                    </footer>
-                </div>
-
-            </article>
-            <article class="houses__house house-card">
-                <header class="house-card__header">
-                    <figure class="house-card__figure">
-                        <img class="house-card__img" src="https://source.unsplash.com/400x300/?house"
-                             alt="house footer sale">
-                        <span class="house-card__label">Independent living</span>
-                    </figure>
-                </header>
-                <div class="house-card__wrapper">
-                    <section class="house-card__content">
-                        <h2 class="house-card__title">Brunlees Court</h2>
-                        <address class="house-card__address">19-23 Cambridge Road, Southport</address>
-                        <p class="house-card__price-info">New Properties for Sale from <strong>£214,999</strong></p>
-                    </section>
-                    <footer class="house-card__footer">
-                        Shared Ownership Available
-                    </footer>
-                </div>
-
-            </article>
-            <article class="houses__house house-card">
-                <header class="house-card__header">
-                    <figure class="house-card__figure">
-                        <img class="house-card__img" src="https://source.unsplash.com/400x300/?house"
-                             alt="house footer sale">
-                        <span class="house-card__label">Independent living</span>
-                    </figure>
-                </header>
-                <div class="house-card__wrapper">
-                    <section class="house-card__content">
-                        <h2 class="house-card__title">Brunlees Court</h2>
-                        <address class="house-card__address">19-23 Cambridge Road, Southport</address>
-                        <p class="house-card__price-info">New Properties for Sale from <strong>£214,999</strong></p>
-                    </section>
-                    <footer class="house-card__footer">
-                        Shared Ownership Available
-                    </footer>
-                </div>
-
-            </article>
-            <article class="houses__house house-card">
-                <header class="house-card__header">
-                    <figure class="house-card__figure">
-                        <img class="house-card__img" src="https://source.unsplash.com/400x300/?house"
-                             alt="house footer sale">
-                        <span class="house-card__label">Independent living</span>
-                    </figure>
-                </header>
-                <div class="house-card__wrapper">
-                    <section class="house-card__content">
-                        <h2 class="house-card__title">Brunlees Court</h2>
-                        <address class="house-card__address">19-23 Cambridge Road, Southport</address>
-                        <p class="house-card__price-info">New Properties for Sale from <strong>£214,999</strong></p>
-                    </section>
-                    <footer class="house-card__footer">
-                        Shared Ownership Available
-                    </footer>
-                </div>
-
-            </article>
-            <article class="houses__house house-card">
-                <header class="house-card__header">
-                    <figure class="house-card__figure">
-                        <img class="house-card__img" src="https://source.unsplash.com/400x300/?house"
-                             alt="house footer sale">
-                        <span class="house-card__label">Independent living</span>
-                    </figure>
-                </header>
-                <div class="house-card__wrapper">
-                    <section class="house-card__content">
-                        <h2 class="house-card__title">Brunlees Court</h2>
-                        <address class="house-card__address">19-23 Cambridge Road, Southport</address>
-                        <p class="house-card__price-info">New Properties for Sale from <strong>£214,999</strong></p>
-                    </section>
-                    <footer class="house-card__footer">
-                        Shared Ownership Available
-                    </footer>
-                </div>
-
-            </article>
-            <article class="houses__house house-card">
-                <header class="house-card__header">
-                    <figure class="house-card__figure">
-                        <img class="house-card__img" src="https://source.unsplash.com/400x300/?house"
-                             alt="house footer sale">
-                        <span class="house-card__label">Independent living</span>
-                    </figure>
-                </header>
-                <div class="house-card__wrapper">
-                    <section class="house-card__content">
-                        <h2 class="house-card__title">Brunlees Court</h2>
-                        <address class="house-card__address">19-23 Cambridge Road, Southport</address>
-                        <p class="house-card__price-info">New Properties for Sale from <strong>£214,999</strong></p>
-                    </section>
-                    <footer class="house-card__footer">
-                        Shared Ownership Available
-                    </footer>
-                </div>
-
-            </article>
-            <article class="houses__house house-card">
-                <header class="house-card__header">
-                    <figure class="house-card__figure">
-                        <img class="house-card__img" src="https://source.unsplash.com/400x300/?house"
-                             alt="house footer sale">
-                        <span class="house-card__label">Independent living</span>
-                    </figure>
-                </header>
-                <div class="house-card__wrapper">
-                    <section class="house-card__content">
-                        <h2 class="house-card__title">Brunlees Court</h2>
-                        <address class="house-card__address">19-23 Cambridge Road, Southport</address>
-                        <p class="house-card__price-info">New Properties for Sale from <strong>£214,999</strong></p>
-                    </section>
-                    <footer class="house-card__footer">
-                        Shared Ownership Available
-                    </footer>
-                </div>
-
-            </article>
-        </section>
+        <section class="houses__list"></section>
     </section>
 </div>
