--- a/#src/scss/base/_variables.scss
+++ b/#src/scss/base/_variables.scss
@@ -5,6 +5,7 @@ $titleColor: #45852d;
 $borderColor: #d8d8d8;
 $cardBg: #f8f8f8;
 $independentLabel: #006f79;
+$supportLabel: #ec6608;
 $white: #fff;
 $mainColor-hover: rgba(#363636, 0.7);
 $mainColor-light: rgba(#363636, 0.5);
