--- a/#src/components/head.html
+++ b/#src/components/head.html
@@ -7,5 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/libs.min.css">
   <link rel="stylesheet" href="./css/main.min.css">
+  <script defer src="js/app.min.js"></script>
   <title>@@title</title>
 </head>
