--- a/#src/components/houses/houses.scss
+++ b/#src/components/houses/houses.scss
@@ -1,8 +1,10 @@
 .houses {
+  padding-bottom: 77px;
   &__list {
     display: flex;
     flex-wrap: wrap;
     margin-left: -22px;
+    margin-bottom: 60px;
   }
 
   &__house {
@@ -15,6 +17,47 @@
 
     @media (max-width: 650px) {
       flex-basis: 100%;
+    }
+  }
+
+  &__link-wrapper {
+    text-align: center;
+  }
+
+  &__link {
+    display: inline-block;
+    min-width: 150px;
+    padding: 12px 10px;
+    border-radius: 25px;
+    border: 1px solid $borderColor;
+    transition: all 0.3s;
+
+    span {
+      position: relative;
+      padding-right: 15px;
+
+      &::after {
+        content: '';
+        width: 10px;
+        height: 15px;
+        top: 1px;
+        right: 0;
+        position: absolute;
+        background-image: url('../images/svgSprite.svg#Chevron');
+        background-position: 0 0;
+        background-size: cover;
+        background-repeat: no-repeat;
+        transition: all 0.3s ease-in-out;
+        transform: translateX(0);
+      }
+    }
+
+    &:hover {
+      border-color: #000;
+
+      span::after {
+        transform: translateX(10px);
+      }
     }
   }
 }
