--- a/#src/components/filter/filter.scss
+++ b/#src/components/filter/filter.scss
@@ -1,9 +1,20 @@
 .filter {
   padding-bottom: 45px;
 
+  &__label {
+    @media (max-width: 600px) {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
   &__label-text {
     margin-right: 12px;
     font-weight: 700;
+
+    @media (max-width: 650px) {
+      margin: 0 0 15px;
+    }
   }
 
   &__input {
