--- a/#src/components/houses/houses.scss
+++ b/#src/components/houses/houses.scss
@@ -1,5 +1,7 @@
 .houses {
   padding-bottom: 77px;
+
+
   &__list {
     display: flex;
     flex-wrap: wrap;
@@ -8,8 +10,14 @@
   }
 
   &__house {
+    display: block;
     flex-basis: calc((100% - 66px) / 3);
     margin: 0 0 38px 22px;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+    }
 
     @media (max-width: 1200px) {
       flex-basis: calc((100% - 44px) / 2);
